# midi-global-hotkey

./: .gitattributes  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
openspec/changes/tauri-with-react/: design.md  proposal.md  tasks.md
openspec/changes/tauri-with-react/specs/app-scaffold/: spec.md
openspec/changes/tauri-with-react/specs/global-hotkey/: spec.md
openspec/changes/tauri-with-react/specs/midi-output/: spec.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
