[package]
name = "midi-global-hotkey"
version = "0.1.0"
edition = "2021"

[lib]
name = "midi_global_hotkey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
midir = "0.10"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
